fix: resolve compilation errors and feature conflicts
- Fix multiple PAC import conflicts by making features mutually exclusive
- Resolve duplicate function definitions in RCC module
- Update documentation workflow to use specific features instead of --all-features
- Prevent timer register access conflicts between different device variants
- Enable proper documentation generation without feature overlaps

This resolves the GitHub Actions workflow failures and allows proper
documentation deployment to GitHub Pages.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -63,8 +63,11 @@ jobs:
         
     - name: Verify project builds
       run: |
-        # Check that the HAL library builds
-        cargo check --all-features --target thumbv6m-none-eabi
+        # Check that the HAL library builds with different device features
+        cargo check --features py32f030xx4 --target thumbv6m-none-eabi
+        cargo check --features py32f003xx4 --target thumbv6m-none-eabi
+        cargo check --features py32f002ax5 --target thumbv6m-none-eabi
+        cargo check --features py32f002bx5 --target thumbv6m-none-eabi
         
     - name: Build documentation book
       run: |
@@ -73,7 +76,7 @@ jobs:
         
     - name: Generate Rust docs
       run: |
-        cargo doc --no-deps --all-features --target thumbv6m-none-eabi
+        cargo doc --no-deps --features py32f030xx4 --target thumbv6m-none-eabi
         
     - name: Prepare GitHub Pages content
       run: |
