feat: Complete project restructuring and VS Code setup
Major improvements to project organization and development environment:

**VS Code Integration:**
- Complete workspace configuration with extensions.json and tasks.json
- Debugging setup for PY32F003 with OpenOCD
- Build tasks for all examples with simplified commands
- Recommended extensions for Rust embedded development

**Build System Enhancements:**
- Simplified Makefile with shorthand commands (make f, make m, etc.)
- PyOCD rescue functionality for emergency programming
- Automatic build directory management
- Enhanced OpenOCD integration

**Documentation Overhaul:**
- Complete getting-started guides with VS Code setup
- Hardware setup documentation with pin diagrams
- Tool-specific guides for OpenOCD and debugging
- Updated all example documentation

**Project Cleanup:**
- Removed redundant scripts and configuration files
- Organized development tools in scripts/ directory
- Streamlined project structure for better maintainability
- Updated all README files with current information

**Development Tools:**
- Added scripts/ directory with organized development utilities
- Enhanced OpenOCD configuration and tools
- Development environment setup automation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-    "rust-analyzer.cargo.features": ["py32f002ax5"],
-    // "rust-analyzer.showUnlinkedFileNotification": false,
-    "rust-analyzer.check.allTargets": false
+    "rust-analyzer.cargo.target": "thumbv6m-none-eabi",
+    "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.cargo.allFeatures": false,
+    "rust-analyzer.cargo.features": ["py32f003xx4"],
+    "rust-analyzer.check.allTargets": false,
+    "files.associations": {
+        "*.svd": "xml"
+    },
+    "cortex-debug.variableUseNaturalFormat": true,
+    "cortex-debug.showRTOS": true
 }
